--- a/css/style.css
+++ b/css/style.css
@@ -384,7 +384,7 @@ a.active::after{
   text-align: center;
   font-weight: bold;
   padding: 20px;
-  margin-bottom: 50px;
+  margin-bottom: 75px;
 }
 
 
@@ -535,6 +535,7 @@ a.active::after{
 }
 
 .success-container {
+  width: 50%;
   border: none;
   border-radius: 15px;
   padding: 20px 30px;
